--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,9 +75,12 @@
   
 
   .sidebar {
-    @apply max-sm:hidden sticky p-4 border-r border-gray-200   flex flex-col;
+    @apply max-sm:hidden sticky p-4 border-r border-gray-200  flex flex-col md:min-w-[300px];
   }
 
-  .mobile-sidebar {
-    @apply sm:hidden sticky p-4 border-r border-gray-200  flex flex-col;
+  .mobile-navbar {
+    @apply sm:hidden sticky  border-r border-gray-200 shadow-container flex justify-between px-6 py-2;
   }
+
+
+  
