--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,6 +73,16 @@
       @apply sticky left-0 top-0 flex h-screen w-fit flex-col  justify-between border-r border-gray-200 bg-white pt-8 text-white max-md:hidden sm:p-4 xl:p-6 2xl:w-[355px];
     } */
   
+.card-right-area{
+  background: url("/icons/Lines.svg");
+  background-size: cover;
+  width: 100%;
+  height: 70%;
+  opacity: 0.5;
+  
+  
+  
+}
 
   .sidebar {
     @apply max-sm:hidden sticky p-4 border-r border-gray-200  flex flex-col md:min-w-[300px];
